# Advanced-Data-Analysis-Toolkit

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: df_plot_parameters.txt
data/: df_plot_parameters.txt
sketches/: llm_data_visualizer_test.py  proof-of-concept.ipynb
src/: driver.py  proof-of-concept.ipynb
src/backend/cli/: cli.py
src/backend/server/: api.py  server.py
src/backend/utils/: logger.py
src/backend/visualizer/: llm_data_visualizer.py
src/backend/visualizer/services/: db_inspector.py  llm_client.py  logger.py  plotting.py  plotting_engine.py  request_retrier.py
src/core/: db_inspector.py  llm_client.py  logger.py  plotting_engine.py
src/frontend/: index.html
src/frontend/static/: script.js  style.css
src/server/: api.py
src/visualizer/: llm_data_visualizer.py
tests/: conftest._py  test_db_inspector.py  test_llm_client.py  test_llm_data_visualizer.py  test_logger.py  test_plotting_engine.py
