[project]
name = "advanced-data-analysis-toolkit"
version = "0.1.0"
description = "This project provides a general-purpose tool for analyzing and visualizing relational databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "google-genai>=1.51.0",
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-schemadisplay>=2.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pandas-stubs>=2.3.3.251201",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "vulture>=2.14",
]

[tool.mypy]
# --- GLOBAL SETTINGS ---
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
exclude = "(^sketches/.*|^tests/.*)"
explicit_package_bases = true
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.ruff]
exclude = ["sketches", "sketches/*", "tests", "tests/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = "src"
addopts = "--cov=src --cov-report=term-missing -ra"
